@@ -70,6 +70,10 @@ ConcurrentVersionsSystem.java:
 ----------------------
 * Fixed bug when module attribute is set to a true CVS module, not just a directory. Patch by Brad Clarke.
 
+CurrentBuildStatusPageListner:
+----------------------
+* Added new listener that will take an input template and do variable substitution to create an output page. Submitted by John Lussmyer
+
 CVS.java:
 ----------------------
 * Deprecated CVS.java in favor of ConcurrentVersionsSystem.java to overcome issues with directory/filename conflicts, specifically with Eclipse IDE (CC-164). Note: CVS.java and other deprecated methods/classes are scheduled for deletion in the 3.0 release.
